--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00ffffff"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -18,11 +19,29 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#c6c4c4" />
+        android:background="#00ffffff" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:background="#00ffffff" />
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00ffffff">
+
+        <fragment
+            android:id="@+id/fragment_input"
+            android:name="com.example.notificationapp.view.fragments.InputFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pager"
+            tools:layout="@layout/fragment_input" />
+    </FrameLayout>
 
 </LinearLayout>
