--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -15,7 +15,8 @@
         app:layout_constraintHorizontal_bias="0.227"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_time_date"
@@ -27,7 +28,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.631" />
+        app:layout_constraintVertical_bias="0.631"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_title"
@@ -39,7 +41,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
+        app:layout_constraintVertical_bias="0.37"
+        android:textColor="@color/black"/>
 
     <Button
         android:id="@+id/btn_send"
@@ -57,6 +60,7 @@
         android:id="@+id/tv_greeting"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
+        android:textColor="@color/black"
         android:text="@string/greetings_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.55"
