--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -1,53 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <EditText
-        android:id="@+id/et_message"
-        android:layout_width="wrap_content"
-        android:layout_height="103dp"
-        android:gravity="bottom"
-        android:hint="@string/message_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/black"/>
-
-    <EditText
-        android:id="@+id/et_time_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/specify_time"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.318"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.631"
-        android:textColor="@color/black"/>
+    android:layout_height="match_parent"
+    android:background="#00C40A0A"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/et_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
         android:hint="@string/title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
+        android:textColor="@color/black"
+        android:textColorHint="@color/secondary_text"
+        android:backgroundTint="@color/color_underline"
+        app:layout_constraintBottom_toTopOf="@+id/et_message"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37"
-        android:textColor="@color/black"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
+        app:layout_constraintVertical_bias="0.368" />
+
+    <EditText
+        android:id="@+id/et_time_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:hint="@string/specify_time"
+        android:textColor="@color/black"
+        android:textColorHint="@color/secondary_text"
+        android:backgroundTint="@color/color_underline"
+        app:layout_constraintBottom_toTopOf="@+id/btn_send"
+        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_message"
+        app:layout_constraintVertical_bias="0.691" />
+
+    <EditText
+        android:id="@+id/et_message"
+        android:layout_width="wrap_content"
+        android:layout_height="103dp"
+        android:layout_marginStart="48dp"
+        android:gravity="bottom"
+        android:hint="@string/message_hint"
+        android:textColor="@color/black"
+        android:textColorHint="@color/secondary_text"
+        android:backgroundTint="@color/color_underline"
+        app:layout_constraintBottom_toTopOf="@+id/et_time_date"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_title"
+        app:layout_constraintVertical_bias="0.09" />
 
     <Button
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/secondary_text"
+
         android:text="@string/send_to_the_time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -59,14 +75,15 @@
     <TextView
         android:id="@+id/tv_greeting"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:textColor="@color/black"
+        android:layout_height="wrap_content"
         android:text="@string/greetings_text"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/text_medium"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintVertical_bias="0.21" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
