--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/flowers_field_cut"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
@@ -15,9 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:tabGravity="fill"
-        app:tabMode="fixed"
         app:tabIndicatorColor="@color/color_underline"
-        />
+        app:tabMode="fixed">
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_input" />
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_list" />
+
+    </com.google.android.material.tabs.TabLayout>
 
     <View
         android:layout_width="match_parent"
@@ -28,8 +38,7 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#00ffffff"
-        />
+        android:background="#00ffffff" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -38,14 +47,15 @@
         android:background="#00ffffff">
 
         <fragment
-            android:id="@+id/fragment_input"
-            android:name="com.example.notificationapp.view.fragments.InputFragment"
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pager"
-            tools:layout="@layout/fragment_input" />
+            app:navGraph="@navigation/mobile_navigation" />
+
     </FrameLayout>
 
 </LinearLayout>
