--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_normal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
@@ -26,21 +26,23 @@
             android:minWidth="25dp"
             android:singleLine="true"
             android:text="1"
-            android:textSize="@dimen/text_medium" />
+            android:textSize="@dimen/text_medium"
+            tools:layout_editor_absoluteX="74dp"
+            tools:layout_editor_absoluteY="102dp" />
 
         <TextView
             android:id="@+id/notification_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_weight="0.75"
             android:ellipsize="end"
             android:hapticFeedbackEnabled="false"
             android:singleLine="false"
             android:text="@string/dummy_text_small"
-            android:textSize="@dimen/text_medium" />
+            android:textSize="@dimen/text_medium"
+            tools:layout_editor_absoluteX="4dp"
+            tools:layout_editor_absoluteY="157dp" />
 
         <TextView
             android:id="@+id/notification_message"
@@ -53,7 +55,9 @@
             android:minWidth="45dp"
             android:singleLine="true"
             android:text="3:00"
-            android:textSize="@dimen/text_medium" />
+            android:textSize="@dimen/text_medium"
+            tools:layout_editor_absoluteX="305dp"
+            tools:layout_editor_absoluteY="57dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
