--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,17 +37,12 @@
     <dimen name="card_elevation">2dp</dimen>
     <dimen name="card_corner_radius">12dp</dimen>
 
-    <!-- elevation for Plant Detail toolbar - used to convert to pixels when hiding/showing -->
-    <dimen name="toolbar_elevation">5dp</dimen>
-
-    <!-- Plant List Header margin -->
-    <dimen name="header_margin">24dp</dimen>
-
-    <!-- minimum height of plant detail page so that the collapsing toolbar can be shown on every page -->
-    <dimen name="plant_description_min_height">555dp</dimen>
-
     <dimen name="text_small">12sp</dimen>
     <dimen name="text_medium">17sp</dimen>
     <dimen name="text_large">21sp</dimen>
+
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="seekbar_label_length">70dp</dimen>
 
 </resources>
