--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -41,6 +41,8 @@
         app:layout_constraintVertical_bias="0.691" />
 
     <EditText
+        app:layout_constraintWidth_max="wrap"
+        app:layout_constraintWidth_percent="0.4"
         android:id="@+id/et_message"
         android:layout_width="wrap_content"
         android:layout_height="103dp"
