--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -1,63 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_normal">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_extra_small"
+    android:layout_marginHorizontal="@dimen/margin_normal"
+    card_view:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        android:background="#5831DD"
         android:clickable="true"
         android:focusable="true"
-        android:padding="4dp">
+        android:padding="@dimen/padding_normal">
 
-        <TextView
-            android:id="@+id/notification_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.1"
-            android:ellipsize="end"
-            android:gravity="start|center_vertical"
-            android:minWidth="25dp"
-            android:singleLine="true"
-            android:text="1"
-            android:textSize="@dimen/text_medium"
-            tools:layout_editor_absoluteX="74dp"
-            tools:layout_editor_absoluteY="102dp" />
+        <ImageView
+            android:id="@+id/image_flower"
+            android:layout_margin="@dimen/margin_small"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/flower"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintWidth_max="wrap"
+            app:layout_constraintWidth_percent="0.2" />
 
         <TextView
             android:id="@+id/notification_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_weight="0.75"
+            android:layout_height="34dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_margin="@dimen/margin_small"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="16dp"
             android:ellipsize="end"
-            android:hapticFeedbackEnabled="false"
             android:singleLine="false"
             android:text="@string/dummy_text_small"
             android:textSize="@dimen/text_medium"
-            tools:layout_editor_absoluteX="4dp"
-            tools:layout_editor_absoluteY="157dp" />
+            app:layout_constrainedHeight="true"
+            app:layout_constraintBottom_toTopOf="@+id/notification_message"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_max="wrap"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/image_flower"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.73"
+            app:layout_constraintWidth_max="wrap"
+            app:layout_constraintWidth_percent="0.65" />
+
+        <TextView
+            android:id="@+id/notification_time"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="@dimen/margin_small"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="0.1"
+            android:gravity="start|center_vertical"
+            android:minWidth="25dp"
+            android:singleLine="true"
+            android:text="@string/sample_date"
+            android:textSize="@dimen/text_medium"
+            app:layout_constraintBottom_toTopOf="@+id/notification_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/image_flower"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.085"
+            app:layout_constraintWidth_percent="0.65" />
 
         <TextView
             android:id="@+id/notification_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
+            android:layout_margin="@dimen/margin_small"
+            android:layout_marginTop="16dp"
             android:layout_weight="0.15"
             android:ellipsize="end"
-            android:gravity="end"
-            android:minWidth="45dp"
-            android:singleLine="true"
-            android:text="3:00"
+            android:text="@string/dummy_text_long"
             android:textSize="@dimen/text_medium"
-            tools:layout_editor_absoluteX="305dp"
-            tools:layout_editor_absoluteY="57dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notification_title"
+            app:layout_constraintWidth_max="wrap"
+            app:layout_constraintWidth_percent="0.9" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
