--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,5 +44,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="seekbar_label_length">70dp</dimen>
+    <dimen name="padding_normal">5dp</dimen>
 
 </resources>
