--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -19,7 +19,7 @@
         android:padding="@dimen/padding_normal">
 
         <ImageView
-            android:id="@+id/image_flower"
+            android:id="@+id/iv_flower"
             android:layout_margin="@dimen/margin_small"
             android:layout_marginHorizontal="5dp"
             android:layout_marginStart="16dp"
@@ -33,7 +33,7 @@
             app:layout_constraintWidth_percent="0.2" />
 
         <TextView
-            android:id="@+id/notification_title"
+            android:id="@+id/tv_notif_title"
             android:layout_height="34dp"
             android:layout_gravity="start|center_vertical"
             android:layout_margin="@dimen/margin_small"
@@ -45,19 +45,19 @@
             android:text="@string/dummy_text_small"
             android:textSize="@dimen/text_medium"
             app:layout_constrainedHeight="true"
-            app:layout_constraintBottom_toTopOf="@+id/notification_message"
+            app:layout_constraintBottom_toTopOf="@+id/tv_notif_message"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_max="wrap"
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/image_flower"
+            app:layout_constraintStart_toEndOf="@+id/iv_flower"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.73"
             app:layout_constraintWidth_max="wrap"
             app:layout_constraintWidth_percent="0.65" />
 
         <TextView
-            android:id="@+id/notification_time"
+            android:id="@+id/tv_notif_date_time"
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:layout_margin="@dimen/margin_small"
@@ -70,16 +70,16 @@
             android:singleLine="true"
             android:text="@string/sample_date"
             android:textSize="@dimen/text_medium"
-            app:layout_constraintBottom_toTopOf="@+id/notification_title"
+            app:layout_constraintBottom_toTopOf="@+id/tv_notif_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/image_flower"
+            app:layout_constraintStart_toEndOf="@+id/iv_flower"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.085"
             app:layout_constraintWidth_percent="0.65" />
 
         <TextView
-            android:id="@+id/notification_message"
+            android:id="@+id/tv_notif_message"
             android:layout_gravity="center_vertical|end"
             android:layout_margin="@dimen/margin_small"
             android:layout_marginTop="16dp"
@@ -90,7 +90,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/notification_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_notif_title"
             app:layout_constraintWidth_max="wrap"
             app:layout_constraintWidth_percent="0.9" />
 
