--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,16 @@
         app:tabMode="fixed">
 
         <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_input" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/title_input"
+            />
 
         <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_list" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/title_list"
+            />
     </com.google.android.material.tabs.TabLayout>
 
     <View
@@ -52,7 +54,7 @@
             android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pager"
+            app:layout_constraintTop_toBottomOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
     </FrameLayout>
